# doi2md

./: .gitignore  AGENTS.md  PRIVATE_PLATFORM_PHASE_1.md  PROJECT_BOUNDARY.md  README.md  README_CN.md  install.sh  package.json  pyproject.toml  tsconfig.base.json
.forgejo/workflows/: ci.yml  phase-1-smoke.yml  private-smoke.yml  production-smoke.yml  publish-mdtero-pypi.yml  release-relay.yml
.github/workflows/: ci.yml  publish-mdtero-pypi.yml  release-github.yml  release-relay.yml
archive/: README.md
archive/mcp-legacy/: README.md  mdtero_mcp.py
codex/: INSTALL.md
desktop/: AGENTS.md  README.md
desktop/releases/: installer-manifest.json
docs/public/: PRODUCTION_SMOKE_2026-05-24.md  README.md  RELEASE_READINESS_2026-05-24.md  desktop-preview.md
extension/: AGENTS.md  README.md  esbuild.config.mjs  manifest.dev.json  manifest.json  package-lock.json  package.json  tsconfig.json
extension/scripts/: chrome-oauth-refresh.mjs  package-beta.mjs  package-dev.mjs  package-webstore.mjs  store-draft.mjs  (+1 more)
helper/: README.md
install/: AGENTS.md  README.md  manifest.json
mcp/: mdtero_mcp.py
openclaw/: INSTALL.md
relay/: .gitignore  README.md  go.mod
scripts/: build_backend_acceptance_sample.mjs  build_backend_acceptance_samples.mjs  collect_acceptance_samples.mjs
shared/: AGENTS.md  package.json
skills/: README.md
tests/: desktop-preview-contract.test.mjs  mdtero-install.test.mjs  opencode-install.test.mjs  public-contract-truth.test.mjs  release-workflow-contract.test.mjs
tests_py/: test_cli_contract.py  test_relay.py  test_secret_guard.py
(+119 files in other folders)
